--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -33,26 +33,65 @@ jobs:
         
     - name: Build Docker image
       run: |
-        docker build -t bemos-node-builder .
+        docker build -t bemos-node-builder . || {
+          echo "❌ Docker build failed"
+          exit 1
+        }
         
     - name: Create output directory
       run: mkdir -p output
       
     - name: Run container to build Node.js
       run: |
-        docker run --rm \
+        echo "🚀 Starting Node.js build for version ${{ steps.version.outputs.node_version }}"
+        if ! docker run --rm \
           -v $(pwd)/output:/out \
-          bemos-node-builder ${{ steps.version.outputs.node_version }}
+          bemos-node-builder ${{ steps.version.outputs.node_version }}; then
+          echo "❌ Container build failed"
+          echo "Container logs (if any):"
+          docker logs $(docker ps -a -q --filter ancestor=bemos-node-builder | head -1) 2>/dev/null || echo "No container logs available"
+          exit 1
+        fi
+        echo "✅ Container build completed"
           
-    - name: List output files
+    - name: Verify build output
       run: |
+        echo "📁 Checking output directory:"
         ls -la output/
-        echo "OUTPUT_FILE=$(ls output/node-*.tar.gz | head -1)" >> $GITHUB_ENV
+        
+        # Check if any tar.gz files were created
+        if ! ls output/node-*.tar.gz 1> /dev/null 2>&1; then
+          echo "❌ No Node.js binary found in output directory"
+          echo "Build failed - no artifacts were produced"
+          exit 1
+        fi
+        
+        # Set the output file variable
+        OUTPUT_FILE=$(ls output/node-*.tar.gz | head -1)
+        echo "✅ Found build artifact: $OUTPUT_FILE"
+        echo "OUTPUT_FILE=$OUTPUT_FILE" >> $GITHUB_ENV
+        
+        # Verify the file is not empty
+        if [ ! -s "$OUTPUT_FILE" ]; then
+          echo "❌ Output file is empty"
+          exit 1
+        fi
+        
+        echo "📊 File size: $(du -h "$OUTPUT_FILE" | cut -f1)"
         
     - name: Extract version from tag
       if: startsWith(github.ref, 'refs/tags/')
       id: get_version
       run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+      
+    - name: Validate build before release
+      if: startsWith(github.ref, 'refs/tags/')
+      run: |
+        if [ ! -f "${OUTPUT_FILE}" ]; then
+          echo "❌ Cannot create release: build artifact not found"
+          exit 1
+        fi
+        echo "✅ Build artifact validated for release"
       
     - name: Create Release
       if: startsWith(github.ref, 'refs/tags/')
@@ -91,7 +130,7 @@ jobs:
         asset_content_type: application/gzip
         
     - name: Upload build artifact (for non-tag pushes)
-      if: "!startsWith(github.ref, 'refs/tags/')"
+      if: ${{ !startsWith(github.ref, 'refs/tags/') }}
       uses: actions/upload-artifact@v4
       with:
         name: node-${{ steps.version.outputs.node_version }}-arm-binary
